--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,13 @@
             "scripts": []
           },
           "configurations": {
-            "production": {
+              "production": {
+                "fileReplacements": [
+                  {
+                    "replace": "src/environments/environment.ts",
+                    "with": "src/environments/environment.prod.ts"
+                  }
+                ],
               "budgets": [
                 {
                   "type": "initial",
